force-app/main/default/objects/b3o__Hiring_Person__c/b3o__Hiring_Person__c.object-meta.xml
<CustomObject>
    <label>Hiring Person</label>
    <nameField>
        <displayFormat>HP-{0000}</displayFormat>
        <label>Hiring Person</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hiring Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>