force-app/main/default/objects/b3o__Hiring_Person__c/fields/b3o__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3o__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Hiring Persons</relationshipLabel>
    <relationshipName>Hiring_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>