force-app/main/default/objects/b3o__Hiring_Person__c/fields/b3o__Hiring_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>b3o__Hiring_Person_Name__c</fullName>
    <formula>if(not(isblank(b3o__User__c)),  b3o__User__r.FirstName &amp; &quot; &quot; &amp; b3o__User__r.LastName, b3o__Contact__r.FirstName &amp; &quot; &quot; &amp; b3o__Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiring Person Name</label>
    <type>Text</type>
</CustomField>