force-app/main/default/objects/b3o__Hiring_Person__c/fields/b3o__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>b3o__Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary?</label>
    <type>Checkbox</type>
</CustomField>