force-app/main/default/objects/b3o__Hiring_Person__c/fields/b3o__User__c.field-meta.xml
<CustomField>
    <fullName>b3o__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hiring_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>