force-app/main/default/objects/b3o__Hiring_Person__c/validationRules/b3o__User_or_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>b3o__User_or_Contact_Required</fullName>
    <active>true</active>
    <description>Either user or contact must be selected</description>
    <errorConditionFormula>AND(isblank(b3o__Contact__c), isblank(b3o__User__c))</errorConditionFormula>
    <errorMessage>Please select a User or Contact to link to this record</errorMessage>
</ValidationRule>